--- a/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
@@ -104,22 +104,22 @@
                         </header>
                         <nav class="only-desktop nav-malhas">
                             <ul>
-                                <li class="node-1"><a href="{{ path('product_category_list', {category: 'lingerie'}) }}" class="troca-malha" data-bg="1"><span class="icon-fitness"></span>Fitness</a></li>
-                                <li class="node-2"><a href="{{ path('product_category_list', {category: 'lingerie'}) }}" class="troca-malha" data-bg="2"><span class="icon-lingerie"></span>Lingerie</a></li>
-                                <li class="node-3"><a href="{{ path('product_category_list', {category: 'lingerie'}) }}" class="troca-malha" data-bg="3"><span class="icon-escolar"></span>Escolar</a></li>
-                                <li class="node-4"><a href="{{ path('product_category_list', {category: 'lingerie'}) }}" class="troca-malha" data-bg="4"><span class="icon-praia"></span>Praia</a></li>
+                                <li class="node-1"><a href="{{ path('product_category_list', {category_slug: 'lingerie'}) }}" class="troca-malha" data-bg="1"><span class="icon-fitness"></span>Fitness</a></li>
+                                <li class="node-2"><a href="{{ path('product_category_list', {category_slug: 'lingerie'}) }}" class="troca-malha" data-bg="2"><span class="icon-lingerie"></span>Lingerie</a></li>
+                                <li class="node-3"><a href="{{ path('product_category_list', {category_slug: 'lingerie'}) }}" class="troca-malha" data-bg="3"><span class="icon-escolar"></span>Escolar</a></li>
+                                <li class="node-4"><a href="{{ path('product_category_list', {category_slug: 'lingerie'}) }}" class="troca-malha" data-bg="4"><span class="icon-praia"></span>Praia</a></li>
                             </ul>
-                            <span class="fake-nav node-1 troca-malha" data-bg="1" data-node="1" data-url="{{ path('product_category_list', {category: 'lingerie'}) }}"></span>
-                            <span class="fake-nav node-2 troca-malha" data-bg="2" data-node="2" data-url="{{ path('product_category_list', {category: 'lingerie'}) }}"></span>
-                            <span class="fake-nav node-3 troca-malha" data-bg="3" data-node="3" data-url="{{ path('product_category_list', {category: 'lingerie'}) }}"></span>
-                            <span class="fake-nav node-4 troca-malha" data-bg="4" data-node="4" data-url="{{ path('product_category_list', {category: 'lingerie'}) }}"></span>
+                            <span class="fake-nav node-1 troca-malha" data-bg="1" data-node="1" data-url="{{ path('product_category_list', {category_slug: 'lingerie'}) }}"></span>
+                            <span class="fake-nav node-2 troca-malha" data-bg="2" data-node="2" data-url="{{ path('product_category_list', {category_slug: 'lingerie'}) }}"></span>
+                            <span class="fake-nav node-3 troca-malha" data-bg="3" data-node="3" data-url="{{ path('product_category_list', {category_slug: 'lingerie'}) }}"></span>
+                            <span class="fake-nav node-4 troca-malha" data-bg="4" data-node="4" data-url="{{ path('product_category_list', {category_slug: 'lingerie'}) }}"></span>
                         </nav>
                         <nav class="only-mobile nav-malhas">
                             <ul class="slide-mobile">
-                                <li class="node-1"><a href="{{ path('product_category_list', {category: 'lingerie'}) }}" class="troca-malha" data-bg="1"><span class="icon-fitness"></span>Fitness <br><strong>Conheça a linha</strong></a></li>
-                                <li class="node-2"><a href="{{ path('product_category_list', {category: 'lingerie'}) }}" class="troca-malha" data-bg="1"><span class="icon-lingerie"></span>Lingerie <br><strong>Conheça a linha</strong></a></li>
-                                <li class="node-3"><a href="{{ path('product_category_list', {category: 'lingerie'}) }}" class="troca-malha" data-bg="1"><span class="icon-escolar"></span>Escolar <br><strong>Conheça a linha</strong></a></li>
-                                <li class="node-4"><a href="{{ path('product_category_list', {category: 'lingerie'}) }}" class="troca-malha" data-bg="1"><span class="icon-praia"></span>Praia <br><strong>Conheça a linha</strong></a></li>
+                                <li class="node-1"><a href="{{ path('product_category_list', {category_slug: 'lingerie'}) }}" class="troca-malha" data-bg="1"><span class="icon-fitness"></span>Fitness <br><strong>Conheça a linha</strong></a></li>
+                                <li class="node-2"><a href="{{ path('product_category_list', {category_slug: 'lingerie'}) }}" class="troca-malha" data-bg="1"><span class="icon-lingerie"></span>Lingerie <br><strong>Conheça a linha</strong></a></li>
+                                <li class="node-3"><a href="{{ path('product_category_list', {category_slug: 'lingerie'}) }}" class="troca-malha" data-bg="1"><span class="icon-escolar"></span>Escolar <br><strong>Conheça a linha</strong></a></li>
+                                <li class="node-4"><a href="{{ path('product_category_list', {category_slug: 'lingerie'}) }}" class="troca-malha" data-bg="1"><span class="icon-praia"></span>Praia <br><strong>Conheça a linha</strong></a></li>
                             </ul>
                         </nav>
                     </article>
