--- a/src/SITE/ProductCategoryBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/ProductCategoryBundle/Resources/views/Default/index.html.twig
@@ -4,7 +4,7 @@
 {% block body_class %}{{ "page-malha" }}{% endblock %}
 {% block body %}
     <main>
-        <div class="img-destaque-topo" style="background: url({{ asset(HeadImage) }});">
+        <div class="img-destaque-topo" style="background: url({{ asset(HeadImage) }}) no-repeat center top;">
             <!--
               images/topo-fitness.png
               images/topo-lingerie.png
