--- a/src/SITE/ProductCategoryBundle/Resources/views/Product/index.html.twig
+++ b/src/SITE/ProductCategoryBundle/Resources/views/Product/index.html.twig
@@ -7,9 +7,9 @@
 
     <main>
 
-        <figure class="img-destaque-topo">
-            <img src="{{ asset(Product.ProductCategory.image) }}">
-        </figure>
+        <div class="img-destaque-topo" style="background: url({{ asset(Product.ProductCategory.image) }}) no-repeat center top;">
+
+        </div>
         <div class="wrapper">
             <section class="miolo-prod">
                 <header class="header-interna">
