Links menu, alteracoes categorias

--- a/app/Resources/views/site/topo.html.twig
+++ b/app/Resources/views/site/topo.html.twig
@@ -13,16 +13,16 @@
                 <li class="node-2 parent">
                     <a href="malha.php">Malhas</a>
                     <ul>
-                        <li><a href="malha.php">Fitness</a></li>
-                        <li><a href="malha.php">Lingerie</a></li>
-                        <li><a href="malha.php">Escolar</a></li>
-                        <li><a href="malha.php">Praia</a></li>
+                        <li><a href="{{ path('product_category_list', {category_slug: 'fitness'}) }}">Fitness</a></li>
+                        <li><a href="{{ path('product_category_list', {category_slug: 'lingerie'}) }}">Lingerie</a></li>
+                        <li><a href="{{ path('product_category_list', {category_slug: 'escolar'}) }}">Escolar</a></li>
+                        <li><a href="{{ path('product_category_list', {category_slug: 'praia'}) }}">Praia</a></li>
                     </ul>
                 </li>
-                <li class="node-3"><a href="servicos.php">Serviços prestados</a></li>
-                <li class="node-4"><a href="representantes.php">Representantes</a></li>
-                <li class="node-5"><a href="trabalhe.php">Trabalhe Conosco</a></li>
-                <li class="node-6"><a href="contato.php">Contato</a></li>
+                <li class="node-3"><a href="{{ path('site_page_services') }}">Serviços prestados</a></li>
+                <li class="node-4"><a href="{#{ path('site_representantes') }#}">Representantes</a></li>
+                <li class="node-5"><a href="{{ path('contato_homepage') }}">Trabalhe Conosco</a></li>
+                <li class="node-6"><a href="{{ path('contato_homepage') }}">Contato</a></li>
                 <li class="node-7 parent">
                     <a href="#">Mídias Sociais</a>
                     <ul>
@@ -32,12 +32,12 @@
                     </ul>
                 </li>
             </ul>
-            <span class="fake-nav node-1" data-node="1" data-url="sobre.php"></span>
+            <span class="fake-nav node-1" data-node="1" data-url="{{ path('site_page_about') }}"></span>
             <span class="fake-nav node-2" data-node="2" data-url="#"></span>
-            <span class="fake-nav node-3" data-node="3" data-url="servicos.php"></span>
-            <span class="fake-nav node-4" data-node="4" data-url="representantes.php"></span>
-            <span class="fake-nav node-5" data-node="5" data-url="trabalhe.php"></span>
-            <span class="fake-nav node-6" data-node="6" data-url="contato.php"></span>
+            <span class="fake-nav node-3" data-node="3" data-url="{{ path('site_page_services') }}"></span>
+            <span class="fake-nav node-4" data-node="4" data-url="{#{ path('site_representantes') }#}"></span>
+            <span class="fake-nav node-5" data-node="5" data-url="{{ path('contato_homepage') }}"></span>
+            <span class="fake-nav node-6" data-node="6" data-url="{{ path('contato_homepage') }}"></span>
             <span class="fake-nav node-7" data-node="7" data-url="#"></span>
         </nav>
 
