--- a/src/SITE/ProductCategoryBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/ProductCategoryBundle/Resources/views/Default/index.html.twig
@@ -17,9 +17,9 @@
                     <h2>{{ TituloCategoria }}</h2>
                 </header>
                 <nav class="filtros-links">
-                    <a href="#" class="ativo">Lançamentos</a>
-                    <a href="#">Nossa Coleção</a>
-                    <a href="#" class="last">Todos</a>
+                    <a href="{{ path('product_category_sub_list', {category_slug: category_slug, subcategory_slug: 'lancamentos'}) }}" {% if subcategory_slug == 'lancamentos' %}class="ativo" {% endif %}>Lançamentos</a>
+                    <a href="{{ path('product_category_sub_list', {category_slug: category_slug, subcategory_slug: 'colecao'}) }}"{% if subcategory_slug == 'colecao' %}class="ativo" {% endif %}>Nossa Coleção</a>
+                    <a href="{{ path('product_category_list', {category_slug: category_slug}) }}" class="{% if subcategory_slug is null %}ativo {% endif %} last">Todos</a>
                 </nav>
                 <form class="filtro">
                     <input type="hidden" name="familia" id="familia">
