--- a/src/SITE/ContatoBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/ContatoBundle/Resources/views/Default/index.html.twig
@@ -1,53 +1,49 @@
-{% extends "::site_base.html.twig" %}
+{% extends "::site/base.html.twig" %}
 
 {% block title %}{% endblock %}
-
+{% block body_class %}{{ "page-contato" }}{% endblock %}
 {% block body %}
 
     <!-- home html:i -->
 
-    <div class='anuncie-contato contato-page'>
-        <div class='center'>
-            <div class='leftside'>
-                <h3>Entre em <b>contato</b></h3>
-                <h4>Deixe sua mensagem para nós</h4>
-                <p>Envia sua mensagem no formulário abaixo e estaremos verificando o mais rápido possível.</p>
-                <form id='contact_form' action="{{ path('contato_send') }}" method="post" onsubmit="return window.validate_contactForm();">
-                    <div class='form-row'>
-                        <label>Nome Completo*</label>
-                        <input class='contact_nome' name="nome" placeholder='Digite seu nome completo aqui' />
-                    </div>
-                    <div class='form-row'>
-                        <label>Email*</label>
-                        <input class='contact_mail' name="email" placeholder='seu@email.com' />
-                    </div>
-                    <div class='form-row'>
-                        <label>Telefone*</label>
-                        <input class='contact_fone' name="telefone" placeholder='+55 (__) ____-_____' />
-                    </div>
-                    <div class='form-row'>
-                        <label>Deixe uma mensagem*</label>
-                        <textarea name="mensagem" class='contact_msg'></textarea>
-                    </div>
-                    <div class='validation-msg'></div>
-                    <div class='form-row'>
-                        <input type='checkbox' class='checkbox contact_check' />
-                        <label class='check-label'>Aceito receber e-mails da Veja ao Vivo e seus parceiros</label>
-                        <button type='submit'>enviar</button>
-                    </div>
-                </form>
-            </div>
-            <div class='rightside'>
-                <h1>contato@vejoaovivo.com.br</h1>                
-                <div id='map-canvas'></div>
-                <script type="text/javascript">jQuery(document).ready(function(){initialize(-26.264269,-48.851168,[[-26.264269,-48.851168]]);});</script>
-                <!--<a href='#'>
-                    <img src='{{ asset('site/images/roundmap.png') }}' />
-                </a>-->
-            </div>
-            <div class='clear'></div>
+    <main>
+
+        <div class="wrapper">
+            <header class="header-interna">
+                <h2>Contato</h2>
+            </header>
+            <p class="intro-form">
+                Para entrar em contato conosco, preencha o formulário abaixo.<br><br>
+                Você também pode nos contatar por e-mail ou telefone:<br>
+                <a href="mailto:contato@douattextil.com.br">contato@douattextil.com.br</a><br>
+                (47) 3441.5722<br>
+                Rua Rui Barbosa, 2930 - Costa e Silva<br>
+                Joinville - SC, 89219-522
+
+
+            </p>
+            {% if(Messages) %}
+                <p>
+                    {% for Mensagem in Messages %}
+                        {{ Mensagem }}
+                    {% endfor %}
+                </p>
+            {% endif %}
+            <form class="form-default" action="{{ path('contato_send') }}" method="post">
+                <input type="hidden" name="estado" id="estado">
+                <input type="hidden" name="cidade" id="cidade">
+                <input type="text" placeholder="Nome" name="nome" required>
+                <input type="text" placeholder="E-mail" name="email" required>
+                <input type="text" placeholder="Telefone" name="telefone" class="tel">
+                <textarea placeholder="Mensagem" name="contact_msg" required></textarea>
+                <button type="submit" class="bt-default">Enviar</button>
+            </form>
+
+
         </div>
-    </div>
+        {% include 'site/footer.html.twig' %}
+
+    </main>
 
     <!-- home html:f -->
 {% endblock %}
