--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -40,8 +40,8 @@
             <meta http-equiv="Rating" content="General"/>
             <meta http-equiv="Distribution" content="Global"/>
             <meta name="google-site-verification" content="6BeOpzqh6WjQsAaNi9JsUVvZwYLOJfL2BUdji2LGqxs"/>
-            <meta name="application-name" content="VejoaoVivo.com.br"/>
-            <link rel="shortcut icon" href="{{ asset('site/images/favicon.jpg') }}" type="image/x-icon">
+            <meta name="application-name" content=""/>
+            <link rel="shortcut icon" href="{{ asset('site/images/favicon_72.png') }}" type="image/x-icon">
             <meta name="keywords" content="C&acirc;meras ao vivo, vejo ao vivo, vejoaovivo, praias, rodovias, animais, tr&acirc;nsito, surf, skate, aeroportos"/>
             <meta name="description" content="As melhores c&acirc;meras ao vivo, antes de sair confira as condi&ccedil;&otilde;es do tr&acirc;nsito veja o clima e movimenta&ccedil;&atilde;o nas praias. Conhe&ccedil;a o Brasil sem sair de casa, s&atilde;o mais de 600 c&acirc;meras ao vivo para voc&ecirc; se divertir."/>
             <meta name="layout" content="user-layout"/>
@@ -66,7 +66,7 @@
                 </script>
                 <!--<script type="text/javascript" src="http://files.cdn.upx.net.br/sandbox/static/library/flowplayer/flowplayer-3.2.4.min.js"></script>-->
                 <script type="text/javascript" src="{{ asset('site/js/jquery.js') }}"></script>
-                <script type="text/javascript" src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>                
+                <script type="text/javascript" src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
                 <script type="text/javascript" src="{{ asset('site/js/jquery.maskedinput.min.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('site/js/player/flowplayer-3.2.6.min.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('site/js/player/flowplayer.ipad.js') }}"></script>
@@ -101,7 +101,7 @@
         </script>
     -->
 
-        {% set messages = app.session.flashbag.get("message") %}        
+        {% set messages = app.session.flashbag.get("message") %}
         {% if (messages is not empty) %}
 
             <script type="text/javascript">
@@ -127,18 +127,18 @@
     }(document, 'script', 'facebook-jssdk'));</script>
 
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABnwbXXUlvyG8VNXkEIFwL9uA10bPxkmE&amp;v=3.9&amp;sensor=false"></script>
-        
+
     <!-- start of html -->
 
     <div class='top-struct'>
         <div class='center'>
             <!--<img class='pub' src='{{ asset('site/images/itau.jpg') }}'/>-->
-            <!-- 728x90_Todo_Site --> 
+            <!-- 728x90_Todo_Site -->
             <div id='div-gpt-ad-1402508026753-0' style='width:728px; height:90px;margin:0px auto;'>
             <script type='text/javascript'>
             googletag.cmd.push(function() { googletag.display('div-gpt-ad-1402508026753-0'); });
             </script>
-            </div> 
+            </div>
 
             <!--<div class='social'>
                 <ul>
