--- a/app/Resources/views/site/base.html.twig
+++ b/app/Resources/views/site/base.html.twig
@@ -1,4 +1,4 @@
-{% include 'site/meta.html.twig' with {title: block('title'), metas_facebook: block('metas_facebook')} %}
+{% include 'site/meta.html.twig' with {title: block('title'), seo: block('seo'), metas_facebook: block('metas_facebook')} %}
 </head>
 <body class="{% block body_class %}page-home{% endblock %}">
 
