--- a/src/SITE/ContatoBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/ContatoBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,11 @@
 {% extends "::site/base.html.twig" %}
 
-{% block title %}{% endblock %}
+{% block seo %}
+    <title>Contato - Douat Têxtil - A malha que movimenta você</title>
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+{% endblock %}
+
 {% block body_class %}{{ "page-contato" }}{% endblock %}
 {% block body %}
 
