--- a/src/SITE/PageBundle/Resources/views/Default/about.html.twig
+++ b/src/SITE/PageBundle/Resources/views/Default/about.html.twig
@@ -1,6 +1,11 @@
 {% extends "::site/base.html.twig" %}
 
-{% block title %}{% endblock %}
+{% block seo %}
+    <title>Douat Têxtil - A malha que movimenta você</title>
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+{% endblock %}
+
 {% block body_class %}{{ "page-sobre" }}{% endblock %}
 {% block body %}
     <main>
@@ -18,7 +23,7 @@
                 <p>
                     Com foco na produção de malha sintética para a confecção de uniformes escolares, a Douat tornou-se referência nacional no setor. Em seguida, expandiu também na fabricação de produtos para a moda feminina, masculina e esportiva. A sua produção expandiu com artigos tecnológicos, atuando na fabricação de malhas destinadas também aos segmentos fitness, lingerie, e praia dentro do universo feminino, masculino e infantil.
                 </p>
-                <p><strong class="tit-sobre">Fios que se movimentam com qualidade.</strong></p>
+                <p><strong class="tit-sobre">Estrutura e capacidade para tecer qualidade.</strong></p>
                 <p>
                     Com investimento em uma tinturaria completa em seu parque fabril, onde a capacidade mensal ultrapassa 200 toneladas, a Douat tem como especialidade a fabricação de malhas em poliamida. Contamos com modernos laboratórios e um rigoroso controle de qualidade.
                 </p>
