--- a/src/SITE/ProductCategoryBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/ProductCategoryBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,11 @@
 {% extends "::site/base.html.twig" %}
 
-{% block title %}Douat - Malhas{% endblock %}
+{% block seo %}
+    <title>{{ TituloCategoria }} - Malhas - Douat Têxtil </title>
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+{% endblock %}
+
 {% block body_class %}{{ "page-malha" }}{% endblock %}
 {% block body %}
     <main>
