--- a/app/Resources/views/site/topo.html.twig
+++ b/app/Resources/views/site/topo.html.twig
@@ -23,7 +23,7 @@
                 <li class="node-4"><a href="{#{ path('site_representantes') }#}">Representantes</a></li>
                 <li class="node-5"><a href="{{ path('contato_homepage') }}">Trabalhe Conosco</a></li>
                 <li class="node-6"><a href="{{ path('contato_homepage') }}">Contato</a></li>
-                <li class="node-7 parent">
+                <li class="node-7 parent" style="display: none">
                     <a href="#">Mídias Sociais</a>
                     <ul>
                         <li><a href="#">Facebook</a></li>
@@ -38,7 +38,7 @@
             <span class="fake-nav node-4" data-node="4" data-url="{#{ path('site_representantes') }#}"></span>
             <span class="fake-nav node-5" data-node="5" data-url="{{ path('contato_homepage') }}"></span>
             <span class="fake-nav node-6" data-node="6" data-url="{{ path('contato_homepage') }}"></span>
-            <span class="fake-nav node-7" data-node="7" data-url="#"></span>
+            <span class="fake-nav node-7" data-node="7" data-url="#" style="display: none"></span>
         </nav>
 
     </div>
