--- a/app/Resources/views/site/meta.html.twig
+++ b/app/Resources/views/site/meta.html.twig
@@ -14,7 +14,7 @@
         {% if seo %}
             {{ seo | raw}}
         {% else %}
-            <title>{% if title %} {{ title }} {% else %} {{ "Douat Têxtil - A malha que movimenta você" }} {% endif %}</title>
+            <title>Douat Têxtil - A malha que movimenta você</title>
             <meta name="description" content="" />
             <meta name="keywords" content="" />
         {% endif %}
