--- a/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,11 @@
 {% extends "::site/base.html.twig" %}
-{% block title %}{{ "Douat" }}{% endblock %}
+
+{% block seo %}
+    <title>Douat Têxtil - A malha que movimenta você</title>
+    <meta name="description" content="Com quase 40 anos de tradição no segmento têxtil, a história da Douat Têxtil Ltda consiste na evolução contínua para apoiar o sucesso de nossos clientes em todo o país. Conheça nossos produtos da linha Escolar, Praia, Fitness ou Lingerie." />
+    <meta name="keywords" content="douat têxtil, douat, têxtil, douat tecidos, tecidos escolar, tecidos fitness, tecidos lingerie, tecidos praia, compra tecidos" />
+{% endblock %}
+
 {% block body_class %}{{ "page-home" }}{% endblock %}
 {% block body %}
     <!-- home html:i -->
