--- a/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
@@ -32,7 +32,7 @@
                                     <p>
                                         Tecidos que envolvem movimentos, fios que transpiram tecnologia. Inspire-se com a poliamida que desenvolve uma trama de inovação, performance e conforto.
                                     </p>
-                                    <a href="{{ path('product_category_list', {category_slug: 'lingerie'}) }}" class="bt-default">Conheça nossas malhas</a>
+                                    <span data-index="2" class="bt-default bt-default-conheca">Conheça nossas malhas</span>
                                 </section>
                             </div>
                             <div class="swiper-slide" data-slide="2">
