--- a/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
@@ -65,7 +65,7 @@
                                     <p>
                                         Performance e tecnologia aliadas para criar a linha Summer Protection UV, desenvolvida para movimentar-se ao ar livre com proteção contra os raios ultravioletas.
                                     </p>
-                                    <a href="{{ path('product_category_all') }}" class="bt-default">Conheça a linha</a>
+                                    <a href="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'lancamentos'}) }}" class="bt-default">Conheça a linha</a>
                                 </section>
                             </div>
 
