--- a/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
@@ -82,7 +82,7 @@
                         <span class="swiper-pagination-switch">4</span>
                     </div>
                     <aside>
-                        <nav class="social-footer-home">
+                        <nav class="social-footer-home" style="visibility: hidden;">
                             <ul>
                                 <li><a href="#" class="social-facebook icon-face"><span>Facebook</span></a></li>
                                 <li><a href="#" class="social-instagram icon-instagram"><span>Instagram</span></a></li>
