--- a/app/Resources/views/site/footer.html.twig
+++ b/app/Resources/views/site/footer.html.twig
@@ -1,7 +1,7 @@
 <div class="footer-container">
     <footer class="limiter">
 
-        <nav class="social-footer">
+        <nav class="social-footer" style="visibility: hidden">
             <ul>
                 <li><a href="#" class="social-facebook icon-face"><span>Facebook</span></a></li>
                 <li><a href="#" class="social-instagram icon-instagram"><span>Instagram</span></a></li>
