--- a/app/Resources/views/site/base.html.twig
+++ b/app/Resources/views/site/base.html.twig
@@ -17,7 +17,7 @@
 {% block body %}{% endblock %}
 
 {% include 'site/scripts.html.twig'  %}
-
+{% block pageScripts %}{% endblock %}
 </body>
 <script>
     $(document).ready(function() {
