--- a/src/SITE/ProductCategoryBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/ProductCategoryBundle/Resources/views/Default/index.html.twig
@@ -31,7 +31,7 @@
                     <input type="hidden" name="acabamento" id="acabamento" value="{% if acabamento is not null %}{{ acabamento }}{% endif %}">
                     <input type="hidden" name="cor" id="cor" value="{% if cor is not null %}{{ cor }}{% endif %}">
                     <div class="selectbox">
-                        <a href="#" class="label">Familia</a>
+                        <a href="#" class="label">{% if familia is not null %}{{ familia }}{% else %}Família{% endif %}</a>
                         <div class="opc-selectbox" data-input="familia">
                             {% for Familia in Familias %}
                             <a href="#" data-value="{{ Familia.slug }}">{{ Familia.name }}</a>
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                     <div class="selectbox">
-                        <a href="#" class="label">Acabamento</a>
+                        <a href="#" class="label">{% if acabamento is not null %}{{ acabamento }}{% else %}Acabamento{% endif %}</a>
                         <div class="opc-selectbox" data-input="acabamento">
                             {% for Acabamento in Acabamentos %}
                             <a href="#" data-value="{{ Acabamento.name }}">{{ Acabamento.name }}</a>
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     <div class="selectbox">
-                        <a href="#" class="label">Cor</a>
+                        <a href="#" class="label">{% if cor is not null %}{{ cor }}{% else %}Cor{% endif %}</a>
                         <div class="opc-selectbox" data-input="cor">
                             {% for Cor in Cores %}
                                 <a href="#" data-value="{{ Cor.name }}">{{ Cor.name }}</a>
